--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
             <ul>
                 <li><a href="#">My Requests</a></li>
                 <li><a href="#">Request Approvals</a></li>
-                <li><a href="#">Forms Repository</a></li>
-                <li><a href="#">SwarmPit Status</a></li>
             </ul>
         </nav>
         <button id="newRequestBtn">New Request</button>
@@ -38,8 +36,8 @@
             </tbody>
         </table>
     </main>
-    <script src="34.js"></script> <!-- Link to JavaScript file -->
+    <script src="#"></script> <!-- Link to JavaScript file -->
     <script src="modal.js"></script> <!-- Link to modal JavaScript file -->
-    <script src="35.js"></script> <!-- Link to another JavaScript file -->
+    <script src="#"></script> <!-- Link to another JavaScript file -->
 </body>
 </html>
