baseline for get and post added

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Request Management</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400 ```html
+;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -22,7 +24,7 @@
                     <th>Created At</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="requestTableBody">
                 <!-- Rows will be dynamically inserted here -->
             </tbody>
         </table>
