--- a/signup.html
+++ b/signup.html
@@ -73,42 +73,45 @@
 </head>
 <body>
   <div class="signup-form">
-    <h2>Sign Up</h2>
-    <input type="text" id="fullName" placeholder="Full Name" required>
-    <input type="text" id="username" placeholder="Username" required>
-    <input type="password" id="password" placeholder="Password" required>
-    <button onclick="signup()">Sign Up</button>
+    <form>
+      <label for="full_name">Full Name:</label>
+      <input type="text" id="full_name" name="full_name"><br><br>
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username"><br><br>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password"><br><br>
+      <button onclick="signup()">Signup</button>
+    </form>
   </div>
 
   <div id="toast" class="toast"></div>
 
   <script>
-    function signup() {
-      const fullName = document.getElementById('fullName').value;
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
+function signup() {
+  const full_name = document.getElementById('full_name').value;
+  const username = document.getElementById('username').value;
+  const password = document.getElementById('password').value;
 
-      fetch('/signup', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({ fullName, username, password }),
-      })
-        .then((response) => response.json())
-        .then((data) => {
-          showToast(data.message);
-          if (data.success) {
-            // Optionally redirect to login page or home page
-            setTimeout(() => {
-              window .location.href = '/login.html';
-            }, 2000);
-          }
-        })
-        .catch((error) => {
-          console.error('Error:', error);
-        });
-    }
+  fetch('/signup', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json',
+    },
+    body: JSON.stringify({ full_name, username, password }),
+  })
+    .then((response) => response.json())
+    .then((data) => {
+      if (data.success) {
+        // Redirect to login page or display a success message
+        window.location.href = '/login.html';
+      } else {
+        showToast(data.message);
+      }
+    })
+    .catch((error) => {
+      console.error('Error:', error);
+    });
+}
 
     function showToast(message) {
       const toast = document.getElementById('toast');
